--- a/admin/admin-class-faqs.html
+++ b/admin/admin-class-faqs.html
@@ -242,7 +242,6 @@
               </a>
             </li>
 
-
             <li class="menu-item">
               <a href="admin-video-feedbacks.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-like"></i>
@@ -261,6 +260,11 @@
                 <div data-i18n="Students">Students</div>
               </a>
               <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="admin-students.html" class="menu-link">
+                    <div data-i18n="All Students">All Students</div>
+                  </a>
+                </li>
                 <li class="menu-item">
                   <a href="admin-tuition-fees.html" class="menu-link">
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
@@ -663,7 +667,6 @@
                     ></button>
                   </div>
                   <div class="modal-body">
-
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
