--- a/admin/admin-students.html
+++ b/admin/admin-students.html
@@ -228,7 +228,7 @@
               </a>
             </li>
 
-            <li class="menu-item active">
+            <li class="menu-item">
               <a href="admin-chapters.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-book-open"></i>
                 <div data-i18n="Chapters">Chapters</div>
@@ -254,13 +254,13 @@
               <span class="menu-header-text">Students</span>
             </li>
 
-            <li class="menu-item">
+            <li class="menu-item active open">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-detail"></i>
                 <div data-i18n="Students">Students</div>
               </a>
               <ul class="menu-sub">
-                <li class="menu-item">
+                <li class="menu-item active">
                   <a href="admin-students.html" class="menu-link">
                     <div data-i18n="All Students">All Students</div>
                   </a>
@@ -422,15 +422,43 @@
                           />
                         </div>
                       </div>
+
+                      <!-- Student Search Filter -->
+                      <div class="col-lg-12 mb-4">
+                        <form action="">
+                          <div class="input-group">
+                            <label for="" class="input-group-text">
+                              Choose Class</label
+                            >
+                            <select name="" class="form-select" id="">
+                              <option value="1">Class 1</option>
+                              <option value="2">Class 2</option>
+                              <option value="3">Class 3</option>
+                              <option value="4">Class 4</option>
+                              <option value="5">Class 5</option>
+                            </select>
+
+                            <button class="btn btn-primary">Search</button>
+                            &nbsp;&nbsp;
+                            <button class="btn btn-info">Export</button>
+                          </div>
+                        </form>
+                      </div>
+
                       <div class="col-lg-12">
                         <div class="table-responsive text-nowrap">
                           <table class="table table-hover table-bordered">
                             <thead>
                               <tr>
                                 <th>SL</th>
-                                <th>Class Names</th>
-                                <th>Subjects</th>
-                                <th>Chapters</th>
+                                <th>Profile</th>
+                                <th>STU ID</th>
+                                <th>Student Name</th>
+                                <th>Student Age</th>
+                                <th>Class Name</th>
+                                <th>Parent's Name</th>
+                                <th>Email</th>
+                                <th>Mobile</th>
                                 <th>Actions</th>
                               </tr>
                             </thead>
@@ -439,9 +467,31 @@
                                 <td>
                                   <strong>1</strong>
                                 </td>
-                                <td>Class 5</td>
-                                <td>Bengali</td>
-                                <td>Chapter 1</td>
+                                <td>
+                                  <img
+                                    src="./assets/img/avatars/1.png"
+                                    class="w-px-40 h-auto rounded-circle"
+                                  />
+                                </td>
+                                <td>
+                                  <span class="badge bg-label-danger"
+                                    >25-SW-CLASS8-01</span
+                                  >
+                                </td>
+                                <td>Xyz Mnp</td>
+                                <td>
+                                  <span class="badge bg-label-primary"
+                                    >Age: 8</span
+                                  >
+                                </td>
+                                <td>
+                                  <span class="badge bg-label-warning"
+                                    >Class 8</span
+                                  >
+                                </td>
+                                <td>MNP</td>
+                                <td>xyz@gmail.com</td>
+                                <td>+91-123456789</td>
 
                                 <td>
                                   <button
@@ -474,18 +524,18 @@
             </div>
             <!-- / Content -->
 
-            <!-- Add Chapter Modal -->
+            <!-- Add Student Modal -->
             <div
               class="modal fade"
               id="backDropModalAddClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Add Chapter
+                      Add Student
                     </h5>
                     <button
                       type="button"
@@ -496,6 +546,45 @@
                   </div>
                   <div class="modal-body">
                     <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Parent's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Email ID</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Mobile</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Age</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
                           >Choose Class</label
@@ -513,22 +602,14 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Choose Subject</label
+                          >Password</label
                         >
-                        <select name="" id="" class="form-select">
-                          <option value="1">Subject 1</option>
-                          <option value="2">Subject 2</option>
-                          <option value="3">Subject 3</option>
-                          <option value="4">Subject 4</option>
-                          <option value="5">Subject 5</option>
-                        </select>
+                        <input type="text" class="form-control" />
                       </div>
-                    </div>
 
-                    <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Chapter Name</label
+                          >Confirm Password</label
                         >
                         <input type="text" class="form-control" />
                       </div>
@@ -548,18 +629,18 @@
               </div>
             </div>
 
-            <!-- Edit Chapter Modal -->
+            <!-- Edit Student Modal -->
             <div
               class="modal fade"
               id="backDropModalEditClass"
               data-bs-backdrop="static"
               tabindex="-1"
             >
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-lg">
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Edit Chapter
+                      Edit Student
                     </h5>
                     <button
                       type="button"
@@ -570,6 +651,45 @@
                   </div>
                   <div class="modal-body">
                     <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Parent's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Name</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Email ID</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Mobile</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col mb-3">
+                        <label for="nameBackdrop" class="form-label"
+                          >Student's Age</label
+                        >
+                        <input type="text" class="form-control" />
+                      </div>
+
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
                           >Choose Class</label
@@ -587,22 +707,14 @@
                     <div class="row">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Choose Subject</label
+                          >Password</label
                         >
-                        <select name="" id="" class="form-select">
-                          <option value="1">Subject 1</option>
-                          <option value="2">Subject 2</option>
-                          <option value="3">Subject 3</option>
-                          <option value="4">Subject 4</option>
-                          <option value="5">Subject 5</option>
-                        </select>
+                        <input type="text" class="form-control" />
                       </div>
-                    </div>
 
-                    <div class="row g-2">
                       <div class="col mb-3">
                         <label for="nameBackdrop" class="form-label"
-                          >Chapter Name</label
+                          >Confirm Password</label
                         >
                         <input type="text" class="form-control" />
                       </div>
@@ -622,7 +734,7 @@
               </div>
             </div>
 
-            <!-- Delete Chapter Modal -->
+            <!-- Delete Student Modal -->
             <div
               class="modal fade"
               id="backDropModalDeleteClass"
@@ -633,7 +745,7 @@
                 <form class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="backDropModalTitle">
-                      Delete Chapter
+                      Delete Student
                     </h5>
                     <button
                       type="button"
@@ -645,7 +757,10 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>Are you sure you want to delete this Chapter?</p>
+                        <p>
+                          Are you sure you want to delete this student
+                          <span class="text-danger">25-SW-CLASS8-01</span>?
+                        </p>
                       </div>
                     </div>
                   </div>
