--- a/admin/admin-video-feedbacks.html
+++ b/admin/admin-video-feedbacks.html
@@ -261,6 +261,11 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
+                  <a href="admin-students.html" class="menu-link">
+                    <div data-i18n="All Students">All Students</div>
+                  </a>
+                </li>
+                <li class="menu-item">
                   <a href="admin-tuition-fees.html" class="menu-link">
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
                   </a>
@@ -887,7 +892,9 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="col mb-3">
-                        <p>Are you sure you want to delete this video feedback?</p>
+                        <p>
+                          Are you sure you want to delete this video feedback?
+                        </p>
                       </div>
                     </div>
                   </div>
