--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -192,28 +192,21 @@
             </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-chapters.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-book-open"></i>
                 <div data-i18n="Chapters">Chapters</div>
               </a>
             </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-videos.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-video"></i>
                 <div data-i18n="Videos">Videos</div>
               </a>
             </li>
 
             <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-check"></i>
-                <div data-i18n="Practice Test">Practice Test</div>
-              </a>
-            </li>
-
-            <li class="menu-item">
-              <a href="icons-boxicons.html" class="menu-link">
+              <a href="admin-video-feedbacks.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-like"></i>
                 <div data-i18n="Video Feedbacks">Video Feedbacks</div>
               </a>
@@ -230,6 +223,12 @@
                 <div data-i18n="Students">Students</div>
               </a>
               <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="admin-students.html" class="menu-link">
+                    <div data-i18n="All Students">All Students</div>
+                  </a>
+                </li>
+
                 <li class="menu-item">
                   <a href="admin-tuition-fees.html" class="menu-link">
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
@@ -248,10 +247,7 @@
               <span class="menu-header-text">Enquiry</span>
             </li>
             <li class="menu-item">
-              <a
-                href="admin-enquiry.html"
-                class="menu-link"
-              >
+              <a href="admin-enquiry.html" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-support"></i>
                 <div data-i18n="Enquiry">Enquiry</div>
               </a>
@@ -298,7 +294,6 @@
               <!-- /Search -->
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
-
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a
