--- a/admin/admin-subjects.html
+++ b/admin/admin-subjects.html
@@ -261,6 +261,11 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
+                  <a href="admin-students.html" class="menu-link">
+                    <div data-i18n="All Students">All Students</div>
+                  </a>
+                </li>
+                <li class="menu-item">
                   <a href="admin-tuition-fees.html" class="menu-link">
                     <div data-i18n="Tuition Fees">Tuition Fees</div>
                   </a>
